--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -7,23 +7,21 @@
     <groupId>org.codice</groupId>
     <artifactId>codice-nitf-viewer</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <imaging-nitf-verison>0.2</imaging-nitf-verison>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.codice.imaging.nitf</groupId>
             <artifactId>codice-imaging-nitf-core</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>${imaging-nitf-verison}</version>
         </dependency>
 
         <dependency>
             <groupId>org.codice.imaging.nitf</groupId>
-            <artifactId>codice-imaging-nitf-core</artifactId>
-            <version>0.2-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.codice.imaging.nitf</groupId>
-            <artifactId>codice-nitf-imaging-render</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <artifactId>codice-imaging-nitf-render</artifactId>
+            <version>${imaging-nitf-verison}</version>
         </dependency>
 
         <dependency>
@@ -42,12 +40,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.seaglasslookandfeel</groupId>
-            <artifactId>seaglasslookandfeel</artifactId>
-            <version>0.2.1</version>
         </dependency>
     </dependencies>
 
