--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -9,37 +9,44 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <imaging-nitf-verison>0.2</imaging-nitf-verison>
+        <imaging-nitf.verison>0.2</imaging-nitf.verison>
+        <spring-framework.version>4.2.4.RELEASE</spring-framework.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.codice.imaging.nitf</groupId>
             <artifactId>codice-imaging-nitf-core</artifactId>
-            <version>${imaging-nitf-verison}</version>
+            <version>${imaging-nitf.verison}</version>
         </dependency>
-
         <dependency>
             <groupId>org.codice.imaging.nitf</groupId>
             <artifactId>codice-imaging-nitf-render</artifactId>
-            <version>${imaging-nitf-verison}</version>
+            <version>${imaging-nitf.verison}</version>
         </dependency>
-
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
-
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
             <version>0.4.8</version>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-framework.version}</version>
         </dependency>
     </dependencies>
 
@@ -60,7 +67,7 @@
                 <configuration>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>org.codice.imaging.nitf.viewer.NitfGui</mainClass>
+                            <mainClass>org.codice.imaging.nitf.viewer.Viewer</mainClass>
                         </transformer>
 
                         <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
