--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <imaging-nitf.verison>0.3</imaging-nitf.verison>
+        <imaging-nitf.verison>0.5</imaging-nitf.verison>
         <spring-framework.version>4.2.4.RELEASE</spring-framework.version>
     </properties>
     <dependencies>
@@ -53,7 +53,6 @@
             <artifactId>spring-context</artifactId>
             <version>${spring-framework.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.github.jai-imageio</groupId>
             <artifactId>jai-imageio-core</artifactId>
@@ -62,7 +61,7 @@
         <dependency>
             <groupId>com.github.jai-imageio</groupId>
             <artifactId>jai-imageio-jpeg2000</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1_CODICE_1</version>
         </dependency>
     </dependencies>
 
