--- a/codice-nitf-viewer/pom.xml
+++ b/codice-nitf-viewer/pom.xml
@@ -4,29 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.codice</groupId>
+    <parent>
+        <groupId>org.codice</groupId>
+        <artifactId>codice-nitf-tools</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>codice-nitf-viewer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
-        <imaging-nitf.verison>0.5</imaging-nitf.verison>
         <spring-framework.version>4.2.4.RELEASE</spring-framework.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.codice.imaging.nitf</groupId>
-            <artifactId>codice-imaging-nitf-core</artifactId>
-            <version>${imaging-nitf.verison}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.imaging.nitf</groupId>
             <artifactId>codice-imaging-nitf-render</artifactId>
-            <version>${imaging-nitf.verison}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.imaging.nitf</groupId>
-            <artifactId>codice-imaging-nitf-fluent-api</artifactId>
-            <version>${imaging-nitf.verison}</version>
+            <version>${imaging-nitf.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
