--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <imaging-nitf.version>0.6-SNAPSHOT</imaging-nitf.version>
+        <imaging-nitf.version>0.6</imaging-nitf.version>
     </properties>
 
     <dependencies>
