--- a/image-viewer/pom.xml
+++ b/image-viewer/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>codice-nitf-viewer</artifactId>
+    <artifactId>codice-image-viewer</artifactId>
     <packaging>jar</packaging>
 
     <properties>
@@ -19,19 +19,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.codice.imaging.nitf</groupId>
-            <artifactId>codice-imaging-nitf-render</artifactId>
-            <version>${imaging-nitf.version}</version>
-        </dependency>
-        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
         <dependency>
-            <groupId>net.coobird</groupId>
-            <artifactId>thumbnailator</artifactId>
-            <version>0.4.8</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -51,7 +46,7 @@
         <dependency>
             <groupId>com.github.jai-imageio</groupId>
             <artifactId>jai-imageio-jpeg2000</artifactId>
-            <version>1.3.1_CODICE_2</version>
+            <version>1.3.1_CODICE_1</version>
         </dependency>
     </dependencies>
 
